# game-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  TESTING.md  code-design-rules.md  mkdocs.yml  vcpkg.json
.github/workflows/: build.yml  docs.yml  gns-smoke.yml
docs/: index.md  requirements.txt
docs/design/: character-systems.md  critiques-completeness.md  critiques-feasibility.md  critiques-product.md  designs-architecture.md  designs-companion.md  designs-docs-site.md  designs-modding-product.md  designs-roadmap-curriculum.md  hardening-blindspots.md  hardening-principles.md  hardening-testing.md  master-plan.md  prodreview-consistency.md  prodreview-production.md
docs/engine/: combat.md  deterministic-numbers.md  index.md  magic.md  morality.md  npc-behaviour.md  pitch.md  progression.md  relationships.md  roadmap.md  stats-system.md
docs/engine/architecture/: adr-0001-game-first-strategy.md  adr-0002-fixed-60hz-tick.md  adr-0003-single-player-is-a-listen-server.md  adr-0004-one-command-funnel.md  adr-0005-predicted-movement-is-cpp.md  adr-0006-first-party-as-a-mod-ratchet.md  adr-0007-cpp20-cmake-vcpkg.md  adr-0008-sdl3-platform.md  adr-0009-sdl-gpu-renderer.md  adr-0010-entt-ecs.md  adr-0011-jolt-charactervirtual.md  adr-0012-ozz-animation.md  adr-0013-json-authored-bitstream-wire.md  adr-0014-gns-transport.md  adr-0015-luau-modding.md  adr-0016-behavior-trees.md  adr-0017-errors-expected-boundaries.md  adr-0018-testing-three-lanes.md  adr-0019-solid-seams-dod-core.md  adr-0020-mit-license-public-repo.md  adr-0021-writes-under-prefpath.md  adr-0022-imgui-slice-ui.md  index.md
docs/engine/skeleton/: client-and-rendering.md  command-funnel.md  core.md  ecs.md  extending.md  index.md  tick-and-systems.md  transport-and-server.md
docs/handbook/: index.md
docs/handbook/ai/: astar-pathfinding.md  behavior-trees.md  blackboards.md  choosing-an-ai-model.md  index.md  navmesh.md  npc-perception.md  recast-detour-overview.md  staggered-ai-scheduling.md  steering.md
docs/handbook/animation/: animation-clips.md  bind-pose.md  blending.md  gltf-asset-pipeline.md  index.md  ozz-overview.md  retargeting.md  skeletal-animation.md  skinning.md
docs/handbook/architecture/: command-funnel.md  composition-over-inheritance.md  data-oriented-design.md  ecs-pattern.md  engine-layering.md  fixed-timestep.md  game-loop.md  index.md  input-as-data.md  serialization-basics.md  solid-at-the-seams.md
docs/handbook/cpp/: cmake-minimum.md  compilation-model.md  core-containers.md  debugging-with-sanitizers.md  footguns-from-other-languages.md  headers-in-practice.md  index.md  lambdas-auto-range-for.md  move-semantics-usage.md  ownership-smart-pointers.md  raii.md  value-semantics.md  what-to-defer.md
docs/handbook/netcode/: bandwidth-basics.md  client-prediction.md  client-server-model.md  entity-interpolation.md  index.md  latency-tradeoffs.md  nat-traversal.md  reconciliation.md  replication-basics.md  server-authority.md  snapshots.md  transport-reliability.md  udp-vs-tcp.md
docs/handbook/physics/: character-controllers.md  index.md  (+7 more)
docs/stylesheets/: accessibility.css
engine/core/: CMakeLists.txt  assert.hpp  bitstream.hpp  fixed.hpp  log.cpp  log.hpp  math.hpp  version.hpp
engine/gpu/: CMakeLists.txt  renderer.cpp  renderer.hpp
engine/net/: CMakeLists.txt  loopback.hpp  server.hpp  transport.hpp
engine/sim/: CMakeLists.txt  command.hpp  components.hpp  simulation.hpp  systems.cpp  systems.hpp  types.hpp  world.cpp  world.hpp
engine/sim/progression/: curve.cpp  curve.hpp
game/app/: CMakeLists.txt  main.cpp
scripts/: check_includes.py  docs_style_lint.py  test.sh
tests/: CMakeLists.txt
tests/core/: test_bitstream.cpp  test_fixed.cpp  test_version.cpp
tests/sim/: test_curve.cpp  test_simulation.cpp
(+42 files in other folders)
